# KROM

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
addons/camera/: CMakeLists.txt  CameraComponents.hpp  CameraSerialization.cpp  CameraSerialization.hpp  CameraViewBuilder.cpp  CameraViewBuilder.hpp
addons/dx11/: CMakeLists.txt  DX11CommandList.cpp  DX11Converters.cpp  DX11Device.cpp  DX11Device.hpp  DX11Enumeration.cpp  DX11Resources.cpp  DX11ShaderReflector.cpp  DX11ShaderReflector.hpp  DX11Stubs.cpp  DX11Swapchain.cpp
addons/forward/: CMakeLists.txt  ForwardFeature.cpp  ForwardFeature.hpp  StandardFramePipeline.hpp
addons/lighting/: CMakeLists.txt  LightingComponents.hpp  LightingExtraction.cpp  LightingExtraction.hpp  LightingFeature.cpp  LightingFeature.hpp  LightingFrameData.cpp  LightingFrameData.hpp  LightingSerialization.cpp  LightingSerialization.hpp  ShadowTypes.hpp
addons/lit/: CMakeLists.txt  LitMaterial.cpp  LitMaterial.hpp
addons/mesh_renderer/: CMakeLists.txt  MeshAssetSceneBindings.hpp  MeshBounds.hpp  MeshRendererComponents.hpp  MeshRendererExtraction.cpp  MeshRendererExtraction.hpp  MeshRendererFeature.cpp  MeshRendererFeature.hpp  MeshRendererSerialization.cpp  MeshRendererSerialization.hpp  MeshSceneQueries.hpp
addons/null/: CMakeLists.txt  NullDevice.cpp  NullDevice.hpp
addons/opengl/: CMakeLists.txt  GLShaderReflector.cpp  GLShaderReflector.hpp  OpenGLCommandList.cpp  OpenGLConverters.cpp  OpenGLDevice.cpp  OpenGLDevice.hpp  OpenGLEnumeration.cpp  OpenGLResources.cpp  OpenGLStubs.cpp  OpenGLSwapchain.cpp  OpenGLWin32Loader.cpp  OpenGLWin32Loader.hpp  glext.h
addons/particles/: CMakeLists.txt  ParticleComponents.hpp
addons/pbr/: CMakeLists.txt  PbrChannelInput.hpp  PbrInstanceBuilder.hpp  PbrMasterMaterial.cpp  PbrMasterMaterial.hpp  PbrMaterial.cpp  PbrMaterial.hpp  PbrSlot.hpp  PbrSlotTable.hpp
addons/runtime/: CMakeLists.txt  EngineAddonAdapters.cpp  EngineAddonAdapters.hpp
addons/shadow/: CMakeLists.txt  ShadowExtraction.cpp  ShadowExtraction.hpp  ShadowFeature.cpp  ShadowFeature.hpp  ShadowFrameData.hpp  ShadowTypes.hpp  ShadowViewBuilder.cpp  ShadowViewBuilder.hpp
addons/unlit/: CMakeLists.txt  UnlitMaterial.cpp  UnlitMaterial.hpp
addons/vulkan/: CMakeLists.txt  VKShaderReflector.cpp  VKShaderReflector.hpp  VulkanCommandList.cpp  VulkanConverters.cpp  VulkanDevice.cpp  VulkanDevice.hpp  VulkanEnumeration.cpp  VulkanResources.cpp  VulkanStubs.cpp  VulkanSwapchain.cpp
assets/: direct_specular_debug.opengl.fs.glsl  direct_specular_debug.ps.hlsl  fullscreen.dx11.vs.hlsl  fullscreen.hlslvs  fullscreen.opengl.vs.glsl  fullscreen.vert  fullscreen.vs.hlsl  fullscreen.vulkan.vs.glsl  ibl_diffuse_debug.opengl.fs.glsl  ibl_diffuse_debug.ps.hlsl  ibl_prefilter_debug.opengl.fs.glsl  ibl_prefilter_debug.ps.hlsl  ibl_specular_debug.opengl.fs.glsl  ibl_specular_debug.ps.hlsl  lit.dx11.ps.hlsl  lit.dx11.vs.hlsl  lit.opengl.fs.glsl  lit.opengl.vs.glsl  lit.ps.hlsl  lit.vs.hlsl  lit.vulkan.fs.glsl  lit.vulkan.vs.glsl  passthrough.dx11.ps.hlsl  passthrough.frag  passthrough.hlslps  passthrough.opengl.fs.glsl  passthrough.ps.hlsl  passthrough.vulkan.fs.glsl  passthrough_raw.opengl.fs.glsl  passthrough_raw.ps.hlsl  pbr_lit.dx11.ps.hlsl  pbr_lit.dx11.vs.hlsl  pbr_lit.frag  pbr_lit.hlslps  pbr_lit.hlslvs  pbr_lit.opengl.fs.glsl  pbr_lit.opengl.vs.glsl  pbr_lit.ps.hlsl  pbr_lit.vert  pbr_lit.vs.hlsl  (+39 more)
doc/: POSTMORTEM_IBL fix & Normalmap correction.md  POSTMORTEM_JOBSYSTEM.md  POSTMORTEM_RENDERING_HANDLE_STORE_BUG.md  POSTMORTEM_VULKAN_BINDING.md  POSTMORTEM_VULKAN_SHADOW.md
examples/: adapter_enum.cpp  dx11_pbr_cube.cpp  dx11_render_loop.cpp  dx11_rotate_cube.cpp  glfw_platform_main.cpp  glfw_render_loop.cpp  main.cpp  opengl_pbr_cube.cpp  opengl_render_loop.cpp  pbr_shadow_main.cpp  triangle_color.cpp  vulkan_pbr_cube.cpp  vulkan_render_loop.cpp
examples/addon_bootstrap/: main.cpp
examples/alt/: adapter_enum.cpp  dx11_render_loop.cpp  material_semantic_demo.cpp  opengl_render_loop.cpp  triangle_color.cpp  vulkan_render_loop.cpp
examples/framework/: ExampleApp.cpp  ExampleApp.hpp  ExampleScene.hpp  LightingValidationScene.cpp  LightingValidationScene.hpp  PbrShadowScene.cpp  PbrShadowScene.hpp
include/assets/: AssetPipeline.hpp  AssetRegistry.hpp  ImageDecoder.hpp  MeshTangents.hpp  TextureImporter.hpp
include/collision/: SceneQueries.hpp
include/core/: AddonContext.hpp  AddonManager.hpp  Debug.hpp  IEngineAddon.hpp  Logger.hpp  Math.hpp  ServiceRegistry.hpp  Types.hpp
include/ecs/: Archetype.hpp  ComponentMeta.hpp  Components.hpp  EntityCommandBuffer.hpp  QueryCache.hpp  World.hpp
include/events/: EventBus.hpp
include/jobs/: ComponentWriteGuard.hpp  FrameScheduler.hpp  JobSystem.hpp  TaskGraph.hpp
include/platform/: GLFWPlatform.hpp  IAudio.hpp  IFilesystem.hpp  IInput.hpp  IPlatform.hpp  IPlatformTiming.hpp  IThread.hpp  IWindow.hpp  NullPlatform.hpp  PlatformInput.hpp  StdFilesystem.hpp  StdTiming.hpp  Win32Platform.hpp
include/renderer/: CommandListRuntime.hpp  CommandSubmissionPlan.hpp  ECSExtractor.hpp  Environment.hpp  EnvironmentSystem.hpp  FeatureID.hpp  FeatureRegistry.hpp  FrameConstantStage.hpp  FrameExecutionStage.hpp  FrameExtractionStage.hpp  FrameGraphStage.hpp  FramePreparationStage.hpp  FrameShaderStage.hpp  FrameUploadStage.hpp  GpuResourceRuntime.hpp  IBLBaker.hpp  IBLCacheSerializer.hpp  IBLResourceLoader.hpp  IBLTypes.hpp  IDevice.hpp  MaterialCBLayout.hpp  MaterialFeatureEval.hpp  MaterialInstance.hpp  MaterialRegistry.hpp  MaterialSystem.hpp  MaterialTypes.hpp  ParameterBlob.hpp  PipelineCache.hpp  PlatformRenderLoop.hpp  RenderFrameOrchestrator.hpp  RenderFrameTypes.hpp  RenderPassRegistry.hpp  RenderPipelineRecipe.hpp  RenderPipelineTypes.hpp  RenderSystem.hpp  RenderWorld.hpp  RendererTypes.hpp  SceneSnapshot.hpp  ShaderBindingModel.hpp  ShaderCompiler.hpp  (+8 more)
include/rendergraph/: CompiledFrame.hpp  (+3 more)
tests/: TestFramework.hpp  main.cpp  test_assets_collision.cpp  test_ecs.cpp  test_events.cpp  test_jobs.cpp  test_platform.cpp  test_renderer.cpp  test_rendergraph.cpp  test_serialization.cpp
(+79 files in other folders)
